project-fortis-interfaces/src/styles/Facts/Facts.css
.report {
    background: white;
    min-height: 100%;
}

#facts .noResults {
    padding: 20px;
}

#facts .inputs-container,
#facts .noResults,
#facts .loadingPage,
#facts .ReactListView > * {
    background: #F3F3EC;
    margin: 0 auto;
}

#facts .inputs-container {
    display: flex;
    justify-content: space-around;
}

#facts .inputs-container > .input-group,
#facts .inputs-container > .dateRow {
    align-self: center;
}

#facts .inputs-container > .input-group {
    width: 300px;
}

#facts .cell {
    box-sizing: border-box;
    padding-top: 20px;
}

#facts .card {
    background: white;
    box-sizing: border-box;
    padding: 10px;
    height: 100%;
    overflow: hidden;
    border: 0;
    border-bottom: 1px solid #ccc;
    position: relative;
}

#facts .card {
    box-shadow: 2px 2px 8px #ccc;
}

#facts .card .title {
    margin: 0;
    padding: 0;
    color: #ccc;
    font-weight: normal;
    font-size: 1.5em;
    /* only display top 2 lines */
    overflow: hidden;
    height: 3em;
}

#facts .card .date {
    margin: 0;
    padding: 0;
    color: #ccc;
}

#facts .card .tags {
    list-style: none;
    margin: 0;
    margin-top: 10px;
    padding: 0;
    width: 100%;
    text-overflow: ellipsis;
    display: block;
    -webkit-line-clamp: 2;
    -webkit-box-orient: vertical;
    color: #ccc;
    /* only display 2 rows of tags */
    overflow: hidden;
    height: 72px;
}

@media screen and (-webkit-min-device-pixel-ratio:0) {
    #facts .card .tags  {
        display: -webkit-box;
    }  
}

#facts .card .tags > * {
    display: inline-block;
    margin-right: 0.5em;
    color: #ccc;
    font-size: 12px;
}

#facts .card .tags li a {
    color: #ccc;
}

#facts .card .tags li:after {
    content: ",";
}

#facts .card .tags li:last-child:after {
    content: "";
}

.truncate-2 {
    overflow: hidden;
    text-overflow: ellipsis;
    display: -webkit-box;
    -webkit-line-clamp: 2;
    -webkit-box-orient: vertical;
    line-height: 1.5;
    word-wrap: break-word;
    color: #ccc; 
}

.truncate {
    overflow: hidden;
    text-overflow: ellipsis;
    display: block;
    white-space: nowrap;
}

.loadingPage {
    position: absolute;
    width: 100%;
    height: 100%;
}

.loadingPage > * {
	position: absolute;
	left: 50%;
	top: 50%;
	transform: translate(-50%, -50%);
}

.loadingPage p {
    color: #ccc;
}

#filters {
    width: 100%;
    height: 36px;
    background: #F3F3EC;
    overflow: hidden;
    position: relative;
    border-bottom: 1px solid #E3E3DC;
    z-index: 1;
}

#select {
    width: 100%;
    line-height: 36px;
    text-align: right;
}

#tags {
    width: 100%;
    height: 36px;
    overflow-y: hidden;
    overflow-x: auto;
    position: relative;
}

.chips {
    width: 100%;
    position: absolute;
    top: 0;
    left: 0;
}

.chips > * {
    float: left;
}

/* fact detail page */

#fact {
    background: white;
}

#fact .topBar {
    background: #F3F3EC;
    height: 44px;
}

#fact .navBtn {
    line-height: 44px;
}

#fact .whitespace {
    padding-top: 20px;
}

#fact h1 {
    font-weight: normal;
    padding-bottom: 20px;
}

#fact .text {
    line-height: 2;
    margin-bottom: 40px;
}

#fact .details {
    margin-top: 20px;
    margin-bottom: 20px;
}

#fact .map {
    margin-top: 8px;
}

#fact .subheading {
    color: gray;
    font-weight: 700;
    font-size: 14px;
    text-transform: uppercase;
}

#fact .drop {
    padding-bottom: 20px;
}

#fact ul.drop {
    margin: 0;
    padding: 0;
    padding-bottom: 20px;
}

#fact .link {
    padding-left: 10px;
    font-size: 16px;
}

#fact .date {
    padding-left: 10px;
}

#fact .viewport{
    padding-left: 0px!important;
    margin-left: 0px!important;
}

